base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiservice
  labels:
    app: apiservice
spec:
  selector:
    app: apiservice
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
