base/identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identityservice
  labels:
    app: identityservice
spec:
  selector:
    app: identityservice
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
